--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Tri)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Tri main.cpp Node.cpp Node.h List.cpp List.h)
+add_executable(Tri main.cpp Node.cpp Node.h)
